Fix generic mod loading exception format